# vello

./: .clippy.toml  .gitattributes  .gitignore  .typos.toml  ARCHITECTURE.md  AUTHORS  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  rustfmt.toml
crates/encoding/: Cargo.toml  README.md
crates/encoding/src/: binning.rs  clip.rs  config.rs  draw.rs  encoding.rs  estimate.rs  glyph.rs  glyph_cache.rs  image_cache.rs  lib.rs  mask.rs  math.rs  monoid.rs  path.rs  ramp_cache.rs  resolve.rs
crates/shaders/: Cargo.toml  README.md  build.rs
crates/shaders/src/: cpu.rs  lib.rs  types.rs
crates/tests/: Cargo.toml  build.rs
crates/tests/src/: lib.rs
crates/tests/tests/: concave.rs  smoke.rs
crates/velato/: Cargo.toml  README.md
examples/headless/: Cargo.toml
examples/run_wasm/: Cargo.toml
examples/scenes/: Cargo.toml
examples/shapes/: Cargo.toml
glifo/: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
glifo/src/: colr.rs  draw_target.rs  glyph.rs  interface.rs  lib.rs  math.rs  renderer.rs  util.rs
hacknight/: Cargo.toml
hacknight/src/: main.rs  simple_text.rs  stats.rs
pgpu-render/: Cargo.toml  build.rs  pgpu.h
pgpu-render/src/: lib.rs  render.rs
piet-gpu/: Cargo.toml
piet-gpu-derive/: Cargo.toml
piet-gpu-derive/src/: derive.rs  glsl.rs  layout.rs  lib.rs  parse.rs
piet-gpu-hal/: Cargo.toml
piet-gpu-hal/examples/: collatz.rs  dx12_toy.rs  metal_toy.rs  prefix.rs  stack.rs
piet-gpu-hal/src/: backend.rs  bestfit.rs  bufwrite.rs  dx12.rs  hub.rs  lib.rs  macros.rs  metal.rs  mux.rs  vulkan.rs
piet-gpu-types/: Cargo.toml
piet-gpu-types/src/: annotated.rs  bins.rs  encoder.rs  fill_seg.rs  lib.rs  main.rs  pathseg.rs  ptcl.rs  scene.rs  segment.rs  state.rs  test.rs  tile.rs  tilegroup.rs
piet-gpu/shader/: .clang-format  annotated.h  backdrop.comp  backdrop.spv  backdrop_lg.spv  bbox_clear.comp  binning.comp  binning.spv  bins.h  blend.h  build.ninja  clip_leaf.comp  clip_reduce.comp  coarse.comp  coarse.spv  draw_leaf.comp  draw_reduce.comp  draw_scan.comp  drawtag.h  elements.comp  elements.spv  fill_seg.h  image.comp  image.spv  kernel1.comp  kernel1.spv  kernel2f.comp  kernel2f.spv  kernel2s.comp  kernel2s.spv  kernel3.comp  kernel3.spv  kernel4.comp  kernel4.spv  kernel4_idx.spv  mem.h  path_coarse.comp  path_coarse.spv  pathseg.comp  pathseg.h  (+15 more)
piet-gpu/src/: blend.rs  encoder.rs  glyph_render.rs  gradient.rs  lib.rs  main.rs  mmark.rs  pico_svg.rs  ramp.rs  render_ctx.rs  render_driver.rs  samples.rs  simple_text.rs  stages.rs  test_scenes.rs  text.rs
piet-scene/: Cargo.toml
piet-scene/src/: conv.rs  geometry.rs  glyph.rs  lib.rs  main.rs  path.rs  resource.rs
piet-wgsl/: .gitignore  Cargo.toml  README.md
piet-wgsl/shader/: backdrop.twgsl  backdrop.wgsl  backdrop_dyn.wgsl  bbox_clear.wgsl  binning.wgsl  clip_leaf.wgsl  clip_reduce.wgsl  coarse.wgsl  config.twgsl  draw_leaf.wgsl  draw_reduce.wgsl  fine.twgsl  fine.wgsl  path_coarse.wgsl  path_coarse_full.wgsl  pathseg.wgsl  pathtag_reduce.twgsl  pathtag_reduce.wgsl  pathtag_scan.twgsl  pathtag_scan.wgsl  segment.twgsl  tile_alloc.wgsl
piet-wgsl/src/: debug.rs  engine.rs  lib.rs  main.rs  ramp.rs  render.rs  shaders.rs  simple_text.rs  template.rs  test_scene.rs  util.rs
planeshift/: Cargo.toml  README.md
planeshift/src/: backend.rs  lib.rs
src/: lib.rs  (+15 more)
tests/: Cargo.toml  README.md
tests/shader/: build.ninja  clear.comp  coherence.comp  corr4.comp  intersection_leaf.comp  intersection_reduce.comp  linkedlist.comp  message_passing.comp  prefix.comp  prefix_nobar.comp  prefix_reduce.comp  prefix_scan.comp  stack_leaf.comp  stack_reduce.comp  union_leaf.comp  union_reduce.comp
tests/src/: bbox_intersection.rs  bbox_union.rs  clear.rs  clip.rs  coherence.rs  config.rs  corr4.rs  draw.rs  linkedlist.rs  main.rs  message_passing.rs  path.rs  piet_tests.rs  prefix.rs  prefix_tree.rs  runner.rs  stack.rs  test_result.rs  transform.rs  util.rs
velato/: Cargo.toml
velato/src/: lib.rs
vello/: Cargo.toml  README.md
vello/shader/: binning.wgsl  draw_reduce.wgsl  fine.wgsl  pathtag_scan.wgsl
vello/src/: cpu.rs  debug.rs  glyph.rs  graph.rs  graph_v2.rs  lib.rs  recording.rs  render.rs  robust.rs  scene.rs  shaders.rs  util.rs  v2.rs  wgpu_engine.rs
vello_api/: Cargo.toml  README.md
vello_api/src/: lib.rs
vello_encoding/: Cargo.toml  README.md
vello_encoding/src/: clip.rs  config.rs  draw.rs  emoji.rs  encoding.rs  estimate.rs  glyph.rs  glyph_cache.rs  image_cache.rs  lib.rs  mask.rs  math.rs  monoid.rs  path.rs  ramp_cache.rs  resolve.rs
vello_hybrid/: Cargo.toml  README.md
vello_hybrid/examples/: gpu.rs  simple.rs
vello_hybrid/shader/: render.wgsl
vello_hybrid/src/: fine.rs  flatten.rs  gpu.rs  lib.rs  pixmap.rs  render.rs  simd.rs  tiling.rs  wide_tile.rs
vello_hybrid/vello_common/: Cargo.toml  README.md
vello_hybrid/vello_cpu/: Cargo.toml  README.md
vello_native/: Cargo.toml
vello_native/src/: lib.rs
vello_pacing/: Cargo.toml  README.md
vello_pacing/src/: choreographed.rs  core.rs  lib.rs
vello_shaders/: Cargo.toml  README.md  build.rs
vello_shaders/shader/: backdrop.wgsl  backdrop_dyn.wgsl  bbox_clear.wgsl  binning.wgsl  clip_leaf.wgsl  clip_reduce.wgsl  coarse.wgsl  draw_leaf.wgsl  draw_reduce.wgsl  fine.wgsl  flatten.wgsl  path_count.wgsl  path_count_setup.wgsl  path_tiling.wgsl  path_tiling_setup.wgsl  pathtag_reduce.wgsl  pathtag_reduce2.wgsl  pathtag_scan.wgsl  pathtag_scan1.wgsl  pathtag_scan_csdldf.wgsl  permutations  prepare.wgsl  pseudo_blur.wgsl  tile_alloc.wgsl
vello_shaders/src/: cpu.rs  lib.rs  types.rs
vello_shaders/tests/: coarse_set_composite.rs
vello_tests/: Cargo.toml  README.md  build.rs
vello_tests/snapshots/: .gitignore
vello_tests/src/: compare.rs  lib.rs  snapshot.rs
vello_tests/tests/: blurred_rounded_rect.rs  compare_gpu_cpu.rs  emoji.rs  hinting.rs  known_issues.rs  property.rs  regression.rs  scene.rs  simplest.rs  smoke.rs  smoke_snapshots.rs  snapshot_test_scenes.rs  snapshots.rs  stateful_compositing_snapshots.rs  test_scene_comparisons.rs
xtask/: Cargo.toml  README.md
xtask/src/: main.rs
(+902 files in other folders)
