[package]
name = "glifo"
version = "0.0.0"
description = "Glifo provides APIs for efficiently rendering text."
keywords = ["text", "layout"]
categories = ["gui", "graphics"]
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

publish = false # When enabling, add it to the MSRV package list in CI

[package.metadata.docs.rs]
all-features = true

[features]
default = ["std"]
std = ["vello_common/std", "skrifa/std", "vello_hybrid?/std"]
libm = ["skrifa/libm", "vello_common/libm", "dep:core_maths"]
png = ["std", "dep:png", "vello_common/png"]
vello_hybrid = ["dep:vello_hybrid"]
debug_glyph_bounds = []

[lints]
workspace = true

[dependencies]
bytemuck = { workspace = true }
foldhash = { workspace = true }
log = { workspace = true }
hashbrown = { workspace = true }
peniko = { workspace = true }
skrifa = { workspace = true }
smallvec = { workspace = true }
vello_common = { workspace = true }
vello_hybrid = { workspace = true, optional = true, features = ["text"] }
png = { workspace = true, optional = true }
core_maths = { workspace = true, optional = true }
