[package]
name = "piet-gpu-derive"
version = "0.0.0"
authors = ["Raph Levien <raph.levien@gmail.com>"]
description = "Proc macro derives for piet-gpu."
license = "MIT/Apache-2.0"
edition = "2018"
keywords = ["graphics", "2d"]
categories = ["rendering::graphics-api"]

[lib]
proc-macro = true

[dependencies]
syn = {version = "1.0.17", features = ["extra-traits", "full"]}
quote = "1.0.3"
proc-macro2 = "1.0.10"
