[package]
name = "piet-gpu-hal"
version = "0.1.0"
authors = ["Raph Levien <raph.levien@gmail.com>"]
description = "An abstraction layer for running compute kernels on GPU."
license = "MIT/Apache-2.0"
edition = "2018"

[dependencies]
ash = "0.33"
ash-window = "0.7"
raw-window-handle = "0.3"
bitflags = "1.2.1"
smallvec = "1.6.1"

[target.'cfg(target_os="windows")'.dependencies]
winapi = { version = "0.3.9", features = [
    'd3d12', 'd3d12sdklayers', 'd3dcommon', 'd3dcompiler', 'dxgi',
    'dxgi1_2', 'dxgi1_3', 'dxgi1_4', 'dxgidebug', 'dxgiformat', 'dxgitype',
    'libloaderapi', 'shellscalingapi', 'synchapi', 'winbase', 'windef',
    'winerror', 'winuser'
] }
wio = "0.2.2"

[target.'cfg(target_os="macos")'.dependencies]
metal = "0.22"
objc = "0.2.5"
block = "0.1.6"
cocoa-foundation = "0.1"
