[package]
name = "piet-gpu-types"
version = "0.0.0"
authors = ["Raph Levien <raph.levien@gmail.com>"]
description = "The scene graph and internal GPU types for piet-gpu."
license = "MIT/Apache-2.0"
edition = "2018"
keywords = ["graphics", "2d"]

[dependencies]
piet-gpu-derive = { path = "../piet-gpu-derive" }
