[package]
name = "piet-gpu"
version = "0.1.0"
authors = ["Raph Levien <raph.levien@gmail.com>"]
description = "A compute-centric GPU 2D renderer."
license = "MIT/Apache-2.0"
edition = "2018"

[[bin]]
name = "cli"
path = "bin/cli.rs"

[[bin]]
name = "winit"
path = "bin/winit.rs"

[dependencies.piet-gpu-hal]
path = "../piet-gpu-hal"

[dependencies.piet-gpu-types]
path = "../piet-gpu-types"

[dependencies]
piet = "0.0.13"
png = "0.16.2"
rand = "0.7.3"
roxmltree = "0.11"
winit = "0.22"
