[package]
name = "piet-gpu"
version = "0.1.0"
authors = ["Raph Levien <raph.levien@gmail.com>"]
description = "A compute-centric GPU 2D renderer."
readme = "README.md"
license = "MIT/Apache-2.0"
edition = "2018"

[[bin]]
name = "cli"
path = "bin/cli.rs"

[[bin]]
name = "winit"
path = "bin/winit.rs"

[[example]]
name = "android"
path = "bin/android.rs"
crate-type = ["cdylib"]

[dependencies.piet-gpu-hal]
path = "../piet-gpu-hal"

[dependencies.piet-gpu-types]
path = "../piet-gpu-types"

[dependencies]
piet = "0.2.0"
png = "0.16.2"
rand = "0.7.3"
roxmltree = "0.13"
winit = "0.26.1"
clap = "2.33"
swash = "0.1.4"
bytemuck = { version = "1.7.2", features = ["derive"] }

[target.'cfg(target_os = "android")'.dependencies]
ndk = "0.3"
ndk-sys = "0.2.0"
ndk-glue = "0.3"
raw-window-handle = "0.3"

[package.metadata.android.application]
debuggable = true
