[package]
name = "piet-gpu"
version = "0.1.0"
authors = ["Raph Levien <raph.levien@gmail.com>"]
description = "A compute-centric GPU 2D renderer."
readme = "README.md"
license = "MIT/Apache-2.0"
edition = "2018"

[[bin]]
name = "cli"
path = "bin/cli.rs"

[[bin]]
name = "winit"
path = "bin/winit.rs"

[[example]]
name = "android"
path = "bin/android.rs"
crate-type = ["cdylib"]

[dependencies.piet-gpu-hal]
path = "../piet-gpu-hal"

[dependencies.piet-gpu-types]
path = "../piet-gpu-types"

[dependencies.piet-scene]
path = "../piet-scene"

[dependencies]
png = "0.17.6"
rand = "0.8.5"
roxmltree = "0.13"
winit = {version = "0.27.3",  default-features = false, features = ["x11", "wayland", "wayland-dlopen"]}
raw-window-handle = "0.5"
clap = "3.2.22"
bytemuck = { version = "1.7.2", features = ["derive"] }

[target.'cfg(target_os = "android")'.dependencies]
ndk = "0.3"
ndk-sys = "0.2.0"
ndk-glue = "0.3"
raw-window-handle = "0.3"

[package.metadata.android.application]
debuggable = true
