[package]
name = "planeshift"
version = "0.1.0"
description = "TODO"
categories = ["gui"]
keywords = ["windowing", "compositor"]
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[package.metadata.docs.rs]
all-features = true
# There are no platform specific docs.
default-target = "x86_64-unknown-linux-gnu"
targets = []

[features]
default = ["enable-winit"]
enable-winit = ["dep:winit"]

[lints]
workspace = true

[dependencies]
bitflags = "2.9.0"
euclid = "0.22.11"
image = { workspace = true }
winit = { workspace = true, optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
block = "0.1"
cocoa = "0.26.0"
core-graphics = "0.24.0"
objc = "0.2"
