[package]
name = "piet-gpu-tests"
version = "0.1.0"
authors = ["Raph Levien <raph.levien@gmail.com>"]
description = "Tests for piet-gpu shaders and generic GPU capabilities."
license = "MIT/Apache-2.0"
edition = "2021"

[features]
default = ["piet-gpu"]

[dependencies]
clap = "3.2.22"
bytemuck = "1.7.2"
kurbo = "0.7.1"
rand = "0.7.3"

[dependencies.piet-gpu-hal]
path = "../piet-gpu-hal"

[dependencies.piet-gpu]
path = "../piet-gpu"
optional = true
