[package]
name = "vello"
version.workspace = true
description = "A GPU compute-centric 2D renderer."
categories = ["rendering", "graphics"]
keywords = ["2d", "vector-graphics"]
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[package.metadata.docs.rs]
all-features = true
# There are no platform specific docs.
default-target = "x86_64-unknown-linux-gnu"
targets = []

[features]
default = ["wgpu", "wgpu_default"]
# Enables GPU memory usage estimation. This performs additional computations
# in order to estimate the minimum required allocations for buffers backing
# bump-allocated GPU memory.
# TODO: Turn this into a runtime option used at resolve time and remove the feature.
bump_estimate = ["vello_encoding/bump_estimate"]
wgpu = ["dep:wgpu", "dep:vello_shaders", "dep:futures-intrusive"]
# Enable wgpu with its default features. If you need to customise the set of enabled wgpu features,
# please disable this crate's default features, enable its "wgpu" feature, then depend on wgpu directly
# with the features which you need enabled.
wgpu_default = ["wgpu", "wgpu/default"]

# Development only features

# Enables debug features when using the "async" pipeline.
# This is only intended for development of Vello itself.
debug_layers = []
# Enables an embedded wgpu-profiler profiler.
# This is only intended for development of Vello itself.
wgpu-profiler = ["dep:wgpu-profiler"]
# Enables hot reloading of Vello shaders.
# This is only intended for development of Vello itself.
# In practise, this won't compile outside of the Vello repository.
hot_reload = ["vello_shaders/compile"]

[lints]
workspace = true

[dependencies]
vello_encoding = { workspace = true }
vello_shaders = { workspace = true, optional = true }
bytemuck = { workspace = true }
skrifa = { workspace = true, features = ["std"] }
peniko = { workspace = true, default-features = true }
wgpu = { workspace = true, default-features = false, optional = true }
log = { workspace = true }
static_assertions = { workspace = true }
futures-intrusive = { workspace = true, optional = true }
wgpu-profiler = { workspace = true, optional = true }
thiserror = { workspace = true }
# TODO: Add feature for built-in bitmap emoji support?
png = { workspace = true }
